Remove gap space between stats to avoid cut off

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1225,6 +1225,14 @@ video {
   gap: 2rem;
 }
 
+.gap-7 {
+  gap: 1.75rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .gap-x-1 {
   -moz-column-gap: 0.25rem;
        column-gap: 0.25rem;
